anonimizacja oceny zajęć, skrypt do backupu

--- a/infra/playbooks/configure.yml
+++ b/infra/playbooks/configure.yml
@@ -32,7 +32,7 @@
         - redis-server
         - nginx
         - postfix
-        - p7zip-full
+        - bzip2
       become: yes
 
     - name: Instal yarn
