--- a/infra/playbooks/restore_db.yml
+++ b/infra/playbooks/restore_db.yml
@@ -9,12 +9,12 @@
   tasks:
     - name: Copy a archives of database dump file
       copy:
-        src: dump.7z
+        src: dump.bz2
         dest: /tmp
         force: yes
 
     - name: Unarchive a dump file
-      shell: 7z x /tmp/dump.7z -o/tmp
+      shell: bzip2 -dc /tmp/dump.bz2 > /tmp/ii_zapisy_dump_dev.sql
 
     - name: Stop nginx service
       become: yes
@@ -77,5 +77,5 @@
 
     - name: Remove a copy of archive
       file:
-        path: "/tmp/dump.7z"
+        path: "/tmp/dump.bz2"
         state: absent
