Próba naprawy Postgresa

--- a/.travis.yml
+++ b/.travis.yml
@@ -7,10 +7,12 @@ addons:
   apt:
     packages:
       - yarnpkg
+      - postgresql-12
+      - postgresql-client-12
     postgresql: "12"
 services:
   - postgresql
-  - redis-server
+  - redis
 
 install:
   - pip install -r zapisy/requirements.test.txt
