--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,7 @@
 dist: focal
+arch: arm64-graviton2
+virt: lxd
+group: edge
 language: python
 python:
   - "3.8"
@@ -7,10 +10,10 @@ addons:
   apt:
     packages:
       - yarnpkg
-    postgresql: "12"
+  postgresql: "12"
 services:
   - postgresql
-  - redis-server
+  - redis
 
 install:
   - pip install -r zapisy/requirements.test.txt
@@ -30,19 +33,19 @@ script: skip
 
 jobs:
   include:
-    - stage: lint
+    - name: lint
       script:
         - python -m flake8 --statistics .
         - (cd zapisy && yarnpkg lint) || exit 1
 
-    - stage: test
+    - name: test
       script:
         - |
           echo "travis_fold:start:yarn"
           # Builds assets.
           (cd zapisy && yarnpkg dev:tc) || exit 1
           echo "travis_fold:end:yarn"
-        - cd zapisy && python manage.py test apps --failfast --parallel
+        - cd zapisy && python manage.py test apps --failfast --parallel --nomigrations
 
 cache:
   - pip
