Poprawki do playbooków i instrukcji (#969)
Zmiany w playbookach obejmują:
- Wiele drobnych poprawek, jak uruchamianie Yarna, nie nadpisywanie certyfikatów, itp.
- Hasła w zaszyfrowanym pliku z użyciem Ansible Vault.
- Bardziej uporządkowane i modularne playbooki.
- Wysyłanie logów na New Relic.
- Konfiguracja serwera poczty wychodzącej z użyciem SMTP Relay.

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,9 @@
-venv*/
+venv/
+infra/hosts/*.conf
+infra/playbooks/*.env
+infra/playbooks/*.7z
+infra/playbooks/ssl/*.crt
+infra/playbooks/ssl/*.key
 *.pyc
 *.swp
 .project
@@ -26,3 +31,4 @@ zapisy/webpack_resources/webpack-stats.json
 *.gz
 *.sql
 *.sqlite3
+socket
