--- a/infra/playbooks/configure.yml
+++ b/infra/playbooks/configure.yml
@@ -5,7 +5,6 @@
     APP_DB_USER: fereol
     APP_DB_NAME: fereol
     ansible_python_interpreter: "/usr/bin/python3"
-    pwd_alias: "{{ lookup('password', '/dev/null length=15 chars=ascii_letters,digits') }}"
 
   tasks:
 
@@ -23,18 +22,12 @@
         pkg:
         - acl
         - nodejs
-        - npm
+        - yarnpkg
         - git
         - redis-server
         - nginx
         - postfix
         - p7zip-full
-      become: yes
-
-    - name: Instal yarn
-      npm:
-        name: yarn
-        global: yes
       become: yes
 
     - name: Install python tools
@@ -60,17 +53,21 @@
         group: "{{ deploy_user }}"
         create_home: yes
 
-    # Generate passwords and edit .env file
-    - name: Generate password
+    - name: Generate Postgres password
       set_fact:
-        APP_DB_PASS: "{{ pwd_alias }}"
+        APP_DB_PASS: "{{ lookup('password', '/dev/null length=15 chars=ascii_letters,digits') }}"
+      no_log: True
+
+    - name: Generate Django Secret key
+      set_fact:
+        DJANGO_SECRET_KEY: "{{ lookup('password', '/dev/null length=50 chars=printable') }}"
       no_log: True
 
     - name: Copy .env file to deploy_user's home and edit
       become: yes
       become_user: "{{ deploy_user }}"
       template:
-        src: .env
+        src: templates/env.j2
         dest: "/home/{{ deploy_user }}/.env"
 
     - name: Copy newrelic.ini to deploy_user's home
@@ -161,11 +158,12 @@
         - {file: "zapisy.conf", path: "sites-available"}
         - {file: "ssl-signed.conf", path: "snippets"}
 
-    - name: Create ssl directory
-      file:
-        path: /etc/nginx/ssl
-        state: directory
+    # Generate a self-signed certificate if none exists
+    - name: Check if certificate exists
       become: yes
+      stat:
+        path: /etc/ssl/private/{{ deploy_server_name }}.key
+      register: ssl_key
 
     - name: Generate an OpenSSL private key
       become: yes
@@ -173,6 +171,7 @@
         path: "/etc/ssl/private/{{ deploy_server_name }}.key"
         group: ssl-cert
         mode: 0640
+      when: not ssl_key.stat.exists
 
     - name: Generate an OpenSSL CSR
       become: yes
@@ -180,6 +179,7 @@
         path: "/etc/ssl/private/{{ deploy_server_name }}.csr"
         privatekey_path: "/etc/ssl/private/{{ deploy_server_name }}.key"
         common_name: "{{ deploy_server_name }}"
+      when: not ssl_key.stat.exists
 
     - name: Generate a Self Signed OpenSSL certificate
       become: yes
@@ -188,6 +188,7 @@
         privatekey_path: "/etc/ssl/private/{{ deploy_server_name }}.key"
         csr_path: "/etc/ssl/private/{{ deploy_server_name }}.csr"
         provider: selfsigned
+      when: not ssl_key.stat.exists
 
     - name: Generate Diffie-Hellman parameters
       become: yes
@@ -196,11 +197,23 @@
         size: 2048
 
     # Configure Postfix
-    - name: Configure nginx service
-      lineinfile:
-        path: /etc/postfix/main.cf
-        regexp: "inet_interfaces"
-        line: "inet_interfaces = loopback-only"
+    - name: Configure Postfix service
+      template:
+        src: templates/main.cf.j2
+        dest: /etc/postfix/main.cf
+      become: yes
+    
+
+    - name: Reload Postfix services
+      systemd:
+        name: postfix
+        state: restarted
+      become: yes
+    
+    - name: Reload Postfix worker
+      systemd:
+        name: postfix@-
+        state: restarted
       become: yes
 
     # Configure other services
