--- a/zapisy/package.json
+++ b/zapisy/package.json
@@ -12,10 +12,11 @@
   },
   "dependencies": {
     "@bokeh/bokehjs": "^2.2.0",
-    "@fullcalendar/bootstrap": "^5.3.1",
-    "@fullcalendar/core": "^5.3.1",
-    "@fullcalendar/daygrid": "^5.3.2",
-    "@fullcalendar/timegrid": "^5.3.1",
+    "@fullcalendar/bootstrap": "5.5.0",
+    "@fullcalendar/core": "5.5.0",
+    "@fullcalendar/daygrid": "5.5.0",
+    "@fullcalendar/interaction": "5.5.0",
+    "@fullcalendar/timegrid": "5.5.0",
     "ContentTools": "^1.6.12",
     "axios": "^0.20.0",
     "big-integer": "^1.6.48",
