--- a/zapisy/package.json
+++ b/zapisy/package.json
@@ -17,6 +17,7 @@
     "@fullcalendar/daygrid": "^5.5.0",
     "@fullcalendar/interaction": "^5.5.0",
     "@fullcalendar/timegrid": "^5.5.0",
+    "@fullcalendar/vue": "^5.5.0",
     "ContentTools": "^1.6.12",
     "axios": "^0.20.0",
     "big-integer": "^1.6.48",
