--- a/zapisy/package.json
+++ b/zapisy/package.json
@@ -11,69 +11,69 @@
     "pnp": true
   },
   "dependencies": {
-    "@bokeh/bokehjs": "^2.2.0",
-    "@fullcalendar/bootstrap": "^5.3.1",
-    "@fullcalendar/core": "^5.3.1",
-    "@fullcalendar/daygrid": "^5.3.2",
-    "@fullcalendar/timegrid": "^5.3.1",
-    "ContentTools": "^1.6.12",
-    "axios": "^0.20.0",
-    "big-integer": "^1.6.48",
-    "bootstrap": "^4.5.2",
+    "@bokeh/bokehjs": "2.3.3",
+    "@fullcalendar/bootstrap": "5.9.0",
+    "@fullcalendar/core": "5.9.0",
+    "@fullcalendar/daygrid": "5.9.0",
+    "@fullcalendar/timegrid": "5.9.0",
+    "ContentTools": "1.6.13",
+    "axios": "0.21.1",
+    "big-integer": "1.6.48",
+    "bootstrap": "4.6.0",
     "bootstrap-sortable": "git://github.com/drvic10k/bootstrap-sortable.git#ff650fd17cc2872f4031d355fa6382066d064e87",
-    "checkboxes.js": "^1.2.2",
-    "dayjs": "^1.8.36",
-    "jquery": "^3.5.1",
-    "js-cookie": "^2.2.1",
-    "js-sha256": "^0.9.0",
-    "katex": "^0.12.0",
-    "lodash-es": "^4.17.15",
-    "markdown-it": "^11.0.1",
-    "popper.js": "^1.16.1",
-    "vue": "^2.6.12",
-    "vue-timers": "^2.0.4",
-    "vuex": "^3.5.1"
+    "checkboxes.js": "1.2.2",
+    "dayjs": "1.10.6",
+    "jquery": "3.6.0",
+    "js-cookie": "2.2.1",
+    "js-sha256": "0.9.0",
+    "katex": "0.13.13",
+    "lodash-es": "4.17.21",
+    "markdown-it": "11.0.1",
+    "popper.js": "1.16.1",
+    "vue": "2.6.14",
+    "vue-timers": "2.0.4",
+    "vuex": "3.6.2"
   },
   "devDependencies": {
-    "@babel/core": "^7.11.6",
-    "@babel/preset-env": "^7.11.5",
-    "@fortawesome/fontawesome-free": "^5.14.0",
-    "@fortawesome/fontawesome-svg-core": "^1.2.30",
-    "@fortawesome/free-brands-svg-icons": "^5.14.0",
-    "@fortawesome/free-regular-svg-icons": "^5.14.0",
-    "@fortawesome/free-solid-svg-icons": "^5.14.0",
-    "@fortawesome/vue-fontawesome": "^2.0.0",
-    "@types/bootstrap": "^4.1.2",
-    "@types/jquery": "^3.3.1",
-    "@types/js-cookie": "^2.2.2",
-    "@types/js-yaml": "^3.12.1",
-    "@types/katex": "^0.11.0",
-    "@types/lodash": "^4.14.110",
-    "@types/markdown-it": "^10.0.2",
-    "autoprefixer": "^9.8.6",
-    "babel-loader": "^8.1.0",
-    "clean-webpack-plugin": "^3.0.0",
-    "cookieconsent": "^3.1.1",
-    "css-loader": "^4.3.0",
-    "file-loader": "^6.1.0",
-    "fork-ts-checker-webpack-plugin": "^5.1.0",
-    "mini-css-extract-plugin": "^0.11.2",
-    "pnp-webpack-plugin": "^1.6.4",
-    "postcss": "^7.0.32",
-    "postcss-loader": "^4.0.1",
-    "prettier": "^2.1.1",
-    "sass": "^1.26.10",
-    "sass-loader": "^10.0.2",
-    "spicery": "^1.1.0",
-    "terser-webpack-plugin": "^4.2.0",
-    "ts-loader": "^8.0.3",
-    "typescript": "^4.0.2",
-    "vue-class-component": "^7.2.5",
-    "vue-loader": "^15.9.3",
-    "vue-template-compiler": "^2.6.12",
-    "webpack": "^4.44.1",
-    "webpack-bundle-analyzer": "^3.9.0",
-    "webpack-bundle-tracker": "^0.4.3",
-    "webpack-cli": "^3.3.12"
+    "@babel/core": "7.15.0",
+    "@babel/preset-env": "7.15.0",
+    "@fortawesome/fontawesome-free": "5.15.4",
+    "@fortawesome/fontawesome-svg-core": "1.2.36",
+    "@fortawesome/free-brands-svg-icons": "5.15.4",
+    "@fortawesome/free-regular-svg-icons": "5.15.4",
+    "@fortawesome/free-solid-svg-icons": "5.15.4",
+    "@fortawesome/vue-fontawesome": "2.0.2",
+    "@types/bootstrap": "4.6.1",
+    "@types/jquery": "3.5.6",
+    "@types/js-cookie": "2.2.7",
+    "@types/js-yaml": "3.12.7",
+    "@types/katex": "0.11.1",
+    "@types/lodash": "4.14.172",
+    "@types/markdown-it": "10.0.3",
+    "autoprefixer": "9.8.6",
+    "babel-loader": "8.2.2",
+    "clean-webpack-plugin": "3.0.0",
+    "cookieconsent": "3.1.1",
+    "css-loader": "4.3.0",
+    "file-loader": "6.2.0",
+    "fork-ts-checker-webpack-plugin": "5.2.1",
+    "mini-css-extract-plugin": "0.12.0",
+    "pnp-webpack-plugin": "1.7.0",
+    "postcss": "7.0.36",
+    "postcss-loader": "4.3.0",
+    "prettier": "2.1.1",
+    "sass": "1.26.10",
+    "sass-loader": "10.2.0",
+    "spicery": "1.1.0",
+    "terser-webpack-plugin": "4.2.3",
+    "ts-loader": "8.3.0",
+    "typescript": "4.0.2",
+    "vue-class-component": "7.2.6",
+    "vue-loader": "15.9.8",
+    "vue-template-compiler": "2.6.14",
+    "webpack": "4.46.0",
+    "webpack-bundle-analyzer": "3.9.0",
+    "webpack-bundle-tracker": "0.4.3",
+    "webpack-cli": "3.3.12"
   }
 }
