--- a/zapisy/requirements.common.txt
+++ b/zapisy/requirements.common.txt
@@ -1,38 +1,38 @@
-Django~=3.1.2
-django-bootstrap-pagination==1.7.0
-django-cas-ng==4.1.1
-django-crispy-forms==1.9.0
-django-environ==0.4.4
+Django==3.1.12
+django-bootstrap-pagination==1.7.1
+django-cas-ng==4.2.1
+django-crispy-forms==1.12.0
+django-environ==0.4.5
 django-extensions==2.2.9
 django-filter==2.4.0
-django-mailer==1.0.0
-redis==3.4.1
-rq==1.3.0
-django-rq==2.3.0
+django-mailer==1.2.6
+redis==3.5.3
+rq==1.9.0
+django-rq==2.4.1
 django-test-without-migrations==0.6
 django-webpack-loader==0.7.0
-djangorestframework==3.11.0
-django-pagedown~=2.0.3
+djangorestframework==3.12.4
+django-pagedown==2.2.1
 
-ipdb==0.11
-prompt-toolkit==3.0.5
-ipython==7.20.0
-pycryptodome==3.8.1
-rollbar~=0.15.0
-newrelic~=5.18.0.148
-gunicorn~=20.0.4
-python-dateutil==2.7.3
-python-memcached==1.58
-xhtml2pdf==0.2.2
+ipdb==0.13.9
+prompt-toolkit==3.0.19
+ipython==7.26.0
+pycryptodome==3.10.1
+rollbar==0.16.1
+newrelic==5.24.0.153
+gunicorn==20.1.0
+python-dateutil==2.8.2
+python-memcached==1.59
+xhtml2pdf==0.2.5
 # BBCode -> HTML
 postmarkup==1.2.2
 # PyYAML is used for fixtures.
-pyyaml~=5.3
+pyyaml==5.4.1
 # Bokeh - library used for plotting in views displaying Poll results
-bokeh~=2.2.0
+bokeh==2.3.3
 
-gspread~=3.6.0
-typing-extensions==3.7.4.1
+gspread==3.7.0
+typing-extensions==3.10.0.0
 oauth2client==4.1.3
 # We use html2text for one-off migration from HTML to markdown.
 html2text
