--- a/zapisy/requirements.production.txt
+++ b/zapisy/requirements.production.txt
@@ -1,5 +1,5 @@
 -r requirements.common.txt
 
-psycopg2~=2.8
-slackclient~=2.7.2
-dropbox~=10.2.0
+psycopg2==2.9.1
+slackclient==2.9.3
+dropbox==10.10.0
