--- a/zapisy/requirements.test.txt
+++ b/zapisy/requirements.test.txt
@@ -1,11 +1,11 @@
 -r requirements.common.txt
 
 # Reduce testing time by using binary psycopg2 package.
-psycopg2-binary~=2.8
+psycopg2-binary==2.9.1
 
-factory_boy~=2.11.1
-parameterized~=0.6.1
-freezegun~=0.3.15
+factory_boy==2.12.0
+parameterized==0.8.1
+freezegun==0.3.15
 tblib
 
 flake8
