--- a/zapisy/package.json
+++ b/zapisy/package.json
@@ -73,7 +73,7 @@
     "vue-template-compiler": "2.6.14",
     "webpack": "4.46.0",
     "webpack-bundle-analyzer": "3.9.0",
-    "webpack-bundle-tracker": "0.4.3",
+    "webpack-bundle-tracker": "^0.4.3",
     "webpack-cli": "3.3.12"
   }
 }
