--- a/zapisy/requirements.common.txt
+++ b/zapisy/requirements.common.txt
@@ -37,3 +37,5 @@ typing-extensions==3.10.0.2
 oauth2client==4.1.3
 # We use html2text for one-off migration from HTML to markdown.
 html2text
+# We use google-cloud-storage to store images from defect
+django-googledrive-storage==1.6.0
