--- a/zapisy/requirements.common.txt
+++ b/zapisy/requirements.common.txt
@@ -14,6 +14,8 @@ django-webpack-loader==0.7.0
 djangorestframework==3.12.4
 django-pagedown==2.2.1
 
+pyparsing==2.4.7
+
 ipdb==0.13.9
 prompt-toolkit==3.0.23
 ipython==7.30.1
