feat: add secret

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -10,6 +10,7 @@ jobs:
     env: 
       PYTHON_VERSION: 3.8
       NODE_VERSION: 12
+      GOOGLE_DRIVE_STORAGE_JSON_KEY_FILE_CONTENTS: ${{ secrets.GOOGLE_DRIVE_STORAGE_JSON_KEY_FILE_CONTENTS }}
     services:
       postgres:
         image: postgres:12
