--- a/zapisy/requirements.common.txt
+++ b/zapisy/requirements.common.txt
@@ -13,6 +13,7 @@ django-test-without-migrations==0.6
 django-webpack-loader==0.7.0
 djangorestframework==3.13.1
 django-pagedown==2.2.1
+django-googledrive-storage==1.6.0
 
 ipdb==0.13.9
 prompt-toolkit==3.0.24
@@ -36,3 +37,5 @@ typing-extensions==3.10.0.2
 oauth2client==4.1.3
 # We use html2text for one-off migration from HTML to markdown.
 html2text
+# We use google-cloud-storage to store images from defect
+django-googledrive-storage==1.6.0
