--- a/zapisy/requirements.common.txt
+++ b/zapisy/requirements.common.txt
@@ -1,23 +1,25 @@
-Django==3.1.14
+Django==3.1.13
 django-bootstrap-pagination==1.7.1
-django-cas-ng==4.3.0
-django-crispy-forms==1.14.0
+django-cas-ng==4.2.1
+django-crispy-forms==1.13.0
 django-environ==0.8.1
 django-extensions==2.2.9
 django-filter==2.4.0
 django-mailer==1.2.6
 redis==3.5.3
-rq==1.10.1
+rq==1.10.0
 django-rq==2.5.1
 django-test-without-migrations==0.6
 django-webpack-loader==0.7.0
-djangorestframework==3.13.1
+djangorestframework==3.12.4
 django-pagedown==2.2.1
 
+pyparsing==2.4.7
+
 ipdb==0.13.9
-prompt-toolkit==3.0.28
-ipython==7.31.1
-pycryptodome==3.14.1
+prompt-toolkit==3.0.23
+ipython==7.30.1
+pycryptodome==3.12.0
 rollbar==0.16.2
 newrelic==5.24.0.153
 gunicorn==20.1.0
@@ -36,3 +38,4 @@ typing-extensions==3.10.0.2
 oauth2client==4.1.3
 # We use html2text for one-off migration from HTML to markdown.
 html2text
+
